# fontheight

./: .gitattributes  .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build-test.yml  codegen.yml  docs.yml  lint.yml  release.yml
cli/: CHANGELOG.md  Cargo.toml
cli/src/: fmt.rs  main.rs
cli/src/fmt/: html.rs  mod.rs
core/: CHANGELOG.md  Cargo.toml
core/src/: errors.rs  exemplars.rs  lib.rs  locations.rs  pens.rs
fontheight/: Cargo.toml
fontheight-core/: Cargo.toml
fontheight-core/src/: exemplars.rs  lib.rs  locations.rs  summary.rs  word_lists.rs
fontheight-wheel/: Cargo.toml
fontheight-wheel/src/: lib.rs
fontheight/src/: fmt.rs  main.rs
harfshapedfa/: CHANGELOG.md  Cargo.toml  README.md
harfshapedfa/src/: convert.rs  errors.rs  lib.rs  location.rs  pens.rs  utils.rs
src/: locations.rs  main.rs  word_lists.rs
static-lang-word-lists/: CHANGELOG.md  Cargo.toml  README.md  build.rs  chicken.rs  egg.py
static-lang-word-lists/data/aosp/: af.toml  af.txt  af_Latn.toml  af_Latn.txt  am.toml  am.txt  am_Ethi.toml  am_Ethi.txt  ar.toml  ar.txt  ar_Arab.toml  ar_Arab.txt  as.toml  as.txt  as_Beng.toml  as_Beng.txt  az.toml  az.txt  az_Latn.toml  az_Latn.txt  be.toml  be.txt  be_Cyrl.toml  be_Cyrl.txt  be_Latn.toml  be_Latn.txt  bg.toml  bg.txt  bg_Cyrl.toml  bg_Cyrl.txt  bn.toml  bn.txt  bn_Beng.toml  bn_Beng.txt  bs.toml  bs.txt  bs_Latn.toml  bs_Latn.txt  ca.toml  ca.txt  (+262 more)
static-lang-word-lists/data/diffenator/: Adlam.json  Adlam.toml  Adlam.txt  Arabic.json  Arabic.toml  Arabic.txt  Armenian.json  Armenian.toml  Armenian.txt  Avestan.json  Avestan.toml  Avestan.txt  Bengali.json  Bengali.toml  Bengali.txt  Bopomofo.json  Bopomofo.toml  Canadian_Aboriginal.json  Canadian_Aboriginal.toml  Canadian_Aboriginal.txt  Chakma.json  Chakma.toml  Chakma.txt  Cherokee.json  Cherokee.toml  Cherokee.txt  Common.json  Common.toml  Common.txt  Cyrillic.json  Cyrillic.toml  Cyrillic.txt  Devanagari.json  Devanagari.toml  Devanagari.txt  Emoji_All.toml  Emoji_All.txt  Emoji_Color.toml  Emoji_Color.txt  Emoji_Textual.toml  (+76 more)
static-lang-word-lists/data/libreoffice/: af_ZA.toml  af_ZA.txt  an_ES.toml  an_ES.txt  ar.toml  ar.txt  as_IN.toml  as_IN.txt  be-official.toml  be-official.txt  bg_BG.toml  bg_BG.txt  bn_BD.toml  bn_BD.txt  bo.toml  bo.txt  br_FR.toml  br_FR.txt  bs_BA.toml  bs_BA.txt  ca-valencia.toml  ca-valencia.txt  ca.toml  ca.txt  ckb.toml  ckb.txt  cs_CZ.toml  cs_CZ.txt  da_DK.toml  da_DK.txt  de_AT_frami.toml  de_AT_frami.txt  de_CH_frami.toml  de_CH_frami.txt  de_DE_frami.toml  de_DE_frami.txt  el_GR.toml  el_GR.txt  en_AU.toml  en_AU.txt  (+149 more)
static-lang-word-lists/data/ucd/: Emoji_All.txt  Emoji_Color.toml  Emoji_Color.txt  Emoji_Textual.txt
static-lang-word-lists/scripts/: aosp_sidecars.py  extract_emoji_sequences.py  import_libreoffice.py  sort_by_vertical_extremes.py
static-lang-word-lists/src/: declarations.rs  lib.rs  metadata.rs  word_lists.rs
static-lang-word-lists/tests/: statics.rs
wheel/: Cargo.toml  pyproject.toml
wheel/src/: lib.rs
xtask/: Cargo.toml  README.md
xtask/src/: egg.rs  main.rs  slwl.rs  slwl_build.rs
