[workspace]
resolver = "2"
members = [
    "fontheight",
    "fontheight-core",
    "fontheight-wheel",
    "static-lang-word-lists",
]

[workspace.dependencies]
log = "0.4.25"
rayon = "1.10"
rustybuzz = "0.20.1"
thiserror = "2"

[profile.release]
lto = true
strip = true

# Speed up build scripts
[profile.dev.build-override]
opt-level = 1
[profile.release.build-override]
opt-level = 1
[profile.dev.package.brotli]
opt-level = 3
[profile.release.package.brotli]
opt-level = 3
