[workspace]
resolver = "2"
members = [
    "fontheight",
    "fontheight-core",
    "fontheight-wheel",
    "static-lang-word-lists",
]

[workspace.dependencies]
log = "0.4.25"
rayon = "1.10"
thiserror = "2"

[profile.dev.package.rustybuzz]
# Rustybuzz debug-asserts that the provided script is the same as
# the text's script, *even if* you're using guess_segment_properties.
debug-assertions = false

[profile.release]
lto = true
strip = true

# Speed up build scripts
[profile.dev.build-override]
opt-level = 1
[profile.release.build-override]
opt-level = 1
[profile.dev.package.brotli]
opt-level = 3
[profile.release.package.brotli]
opt-level = 3

[workspace.lints.rust]
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "forbid"

[workspace.lints.rustdoc]
broken_intra_doc_links = "forbid"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "warn"
