[workspace]
resolver = "2"
members = [
    "cli",
    "core",
    "static-lang-word-lists",
    "xtask",
]

[workspace.dependencies]
kurbo = "0.12.0"
log = "0.4.25"
rayon = "1.10"
# Note: make sure skrifa's read-fonts matches harfrust's read-fonts
skrifa = "=0.37.0"
thiserror = "2"

[profile.release]
lto = true
strip = true

# Speed up build scripts
[profile.dev.build-override]
opt-level = 1
[profile.release.build-override]
opt-level = 1
[profile.dev.package.brotli]
opt-level = 3
[profile.release.package.brotli]
opt-level = 3

[workspace.lints.rust]
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "forbid"

[workspace.lints.rustdoc]
broken_intra_doc_links = "forbid"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "warn"
must_use_candidate = "warn"
missing_const_for_fn = "warn"
