[package]
name = "fontheight-cli"
description = "Find out the vertical extents your font reaches on shaped words"
version = "0.1.0"
edition = "2024"
authors = [
    "Dalton Maag <sd@daltonmaag.com>",
]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/googlefonts/fontheight"
categories = ["text-processing", "visualization"]
keywords = ["font", "fonts", "vertical-metrics"]

[[bin]]
name = "fontheight"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap-verbosity-flag = { version = "3", features = ["log"] }
fontheight = { version = "0.1.5", path = "../core" }
harfrust.workspace = true
harfshapedfa.workspace = true
log.workspace = true
maud = "0.27.0"
rayon.workspace = true
skrifa.workspace = true
svg = "0.18"

[dependencies.static-lang-word-lists]
version = "0.4"
path = "../static-lang-word-lists"
features = ["all"]

[dependencies.clap]
version = "4.5"
features = [
    "derive",
    "deprecated",
    "wrap_help",
]

[dependencies.env_logger]
version = "0.11.6"
default-features = false
features = [
    "auto-color",
]

[lints]
workspace = true
