[package]
name = "fontheight"
description = "Find out the vertical extents your font reaches on shaped words"
version = "0.1.7"
edition = "2024"
authors = ["Dalton Maag <sd@daltonmaag.com>"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/googlefonts/fontheight"
categories = ["text-processing", "visualization"]
keywords = ["font", "fonts", "vertical-metrics"]

[features]
default = ["rayon"]
rayon = ["dep:rayon", "static-lang-word-lists/rayon"]

[dependencies]
# Note: make sure harfrust's read-fonts matches skrifa's read-fonts
harfrust = "=0.3.1"
itertools = "0.14.0"
kurbo = "0.11.1"
ordered-float = "5"
rayon = { workspace = true, optional = true }
# Note: make sure skrifa's read-fonts matches harfrust's read-fonts
skrifa = "=0.37.0"
thiserror = { workspace = true }

[dependencies.static-lang-word-lists]
version = ">=0.2,<0.5"
path = "../static-lang-word-lists"
# Don't include any word lists, they should be included by downstream crates
# through feature unification
default-features = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
