[package]
name = "fontheight-core"
version = "0.1.0"
edition = "2021"
authors = [
    "Dalton Maag <sd@daltonmaag.com>",
]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/googlefonts/fontheight"

[features]
default = [
    "rayon",
]
rayon = ["dep:rayon", "dep:thread_local"]

[dependencies]
itertools = "0.14.0"
kurbo = "0.11.1"
log = { workspace = true }
ordered-float = "4.6"
rayon = { workspace = true, optional = true }
thread_local = {version = "1.1", optional = true }
skrifa = "0.24.0"
thiserror = "2"
diffenator3-lib = { git = "https://github.com/googlefonts/diffenator3", rev = "6f87bb0" }
rustybuzz = "0.18.0"
zeno = "0.3.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
