[package]
name = "fontheight-wheel"
version = "0.1.0"
edition = "2024"

[lib]
name = "fontheight"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
fontheight-core = { version = "0.1.0", path = "../fontheight-core" }
static-lang-word-lists = { version = "0.1.0", path = "../static-lang-word-lists" }

[dependencies.pyo3]
version = "0.23.5"
features = [
    "extension-module",
    "anyhow",
]
