[package]
name = "harfshapedfa"
description = "TODO"
version = "0.1.0"
edition = "2024"
authors = ["Dalton Maag <sd@daltonmaag.com>"]
license = "Apache-2.0"
repository = "https://github.com/googlefonts/fontheight"
categories = ["text-processing"]

[dependencies]
indexmap = "2.12"
harfrust.workspace = true
ordered-float.workspace = true
skrifa.workspace = true
thiserror.workspace = true

[lints]
workspace = true
