[package]
name = "harfshapedfa"
description = "Glue functionality between skrifa & harfrust"
version = "0.1.0"
edition = "2024"
authors = ["Dalton Maag <sd@daltonmaag.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/googlefonts/fontheight"
categories = ["text-processing"]

[features]
default = []
pens = ["dep:kurbo"]

[dependencies]
indexmap = "2.12"
harfrust.workspace = true
kurbo = { version = "0.12.0", optional = true }
ordered-float.workspace = true
skrifa.workspace = true
thiserror.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
