[package]
name = "static-lang-word-lists"
version = "0.1.0"
edition = "2021"
authors = ["Dalton Maag <sd@daltonmaag.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/googlefonts/fontheight"

[dependencies]
brotli-decompressor = "4"
log = { workspace = true }
phf = { version = "0.11.3", features = ["macros"] }
rayon = { workspace = true, optional = true }
thiserror = { workspace = true }

[build-dependencies]
brotli = "7"
minreq = { version = "2.13", features = ["https"] }
heck = "0.5.0"
