[package]
name = "static-lang-word-lists"
description = "Runtime decompressed statically-included word lists"
version = "0.1.0"
edition = "2024"
authors = ["Dalton Maag <sd@daltonmaag.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/googlefonts/fontheight"
categories = ["text-processing", "internationalization", "data-structures"]
keywords = ["word-list", "words"]
exclude = [
    "data",
    "raw",
    "scripts",
    "egg.py",
    "fonts",
]

[dependencies]
brotli-decompressor = "5"
log = { workspace = true }
phf = { version = "0.12.1", features = ["macros"] }
rayon = { workspace = true, optional = true }
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

[dependencies.toml]
version = "0.9.2"
default-features = false
features = [
    "parse",
    "serde",
]

[build-dependencies]
brotli = "8"
minreq = { version = "2.13", features = ["https"] }
heck = "0.5.0"

[build-dependencies.zip]
version = "4"
default-features = false
features = [
    "deflate",
]

[lints]
workspace = true
