[package]
name = "static-lang-word-lists"
description = "Runtime decompressed statically-included word lists"
version = "0.4.0"
edition = "2024"
authors = ["Dalton Maag <sd@daltonmaag.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/googlefonts/fontheight"
categories = ["text-processing", "internationalization", "data-structures"]
keywords = ["word-list", "words"]
include = [
    "README.md",
    "Cargo.toml",
    "src",
    "build.rs",
    "chicken.rs",
    # Used in docs
    "data/aosp/en_Latn.toml",
]

[dependencies]
brotli-decompressor = "5"
log = { workspace = true }
rayon = { workspace = true, optional = true }
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

[dependencies.toml]
version = "0.9.2"
default-features = false
features = [
    "parse",
    "serde",
]

[build-dependencies]
brotli = "8"
minreq = { version = "2.13", features = ["https"] }

[build-dependencies.zip]
version = "4"
default-features = false
features = [
    "deflate",
]

[features]
default = ["diffenator"]
rayon = ["dep:rayon"]
aosp = []
diffenator = []
lang-af = []
lang-am = []
lang-ar = []
lang-as = []
lang-az = []
lang-be = []
lang-bg = []
lang-bn = []
lang-bs = []
lang-ca = []
lang-cs = []
lang-da = []
lang-de = []
lang-el = []
lang-en = []
lang-es = []
lang-et = []
lang-eu = []
lang-fa = []
lang-fi = []
lang-fr = []
lang-gl = []
lang-gu = []
lang-hi = []
lang-hr = []
lang-hu = []
lang-hy = []
lang-is = []
lang-it = []
lang-ja = []
lang-ka = []
lang-kk = []
lang-km = []
lang-kn = []
lang-ko = []
lang-ky = []
lang-lo = []
lang-lt = []
lang-lv = []
lang-mk = []
lang-ml = []
lang-mn = []
lang-mr = []
lang-ms = []
lang-my = []
lang-nb = []
lang-ne = []
lang-nl = []
lang-or = []
lang-pa = []
lang-pl = []
lang-pt = []
lang-rm = []
lang-ro = []
lang-ru = []
lang-si = []
lang-sk = []
lang-sl = []
lang-sq = []
lang-sr = []
lang-sv = []
lang-sw = []
lang-ta = []
lang-te = []
lang-th = []
lang-tl = []
lang-tr = []
lang-uk = []
lang-ur = []
lang-uz = []
lang-vi = []
lang-zh = []
lang-zu = []
script-adlm = []
script-arab = []
script-armn = []
script-avst = []
script-beng = []
script-bopo = []
script-cakm = []
script-cans = []
script-cher = []
script-cyrl = []
script-deva = []
script-ethi = []
script-geor = []
script-grek = []
script-gujr = []
script-guru = []
script-hang = []
script-hani = []
script-hebr = []
script-hira = []
script-jpan = []
script-kana = []
script-khmr = []
script-knda = []
script-laoo = []
script-latn = []
script-lisu = []
script-mlym = []
script-mong = []
script-mymr = []
script-olck = []
script-orya = []
script-osge = []
script-sinh = []
script-syrc = []
script-taml = []
script-telu = []
script-tfng = []
script-thaa = []
script-thai = []
script-tibt = []
script-vaii = []
script-zyyy = []
ucd = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
