[package]
name = "fontheight-wheel"
version = "0.1.0"
edition = "2024"
# This is a wheel, it shouldn't be going on crates.io
publish = false

[lib]
name = "libfontheight"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
fontheight = { version = "0.1.0", path = "../core" }
rayon = { workspace = true }
static-lang-word-lists = { version = "0.1.0", path = "../static-lang-word-lists" }

[dependencies.pyo3]
version = "0.24.1"
features = [
    "extension-module",
    "anyhow",
]

# FIXME: enable workspace lints when pushing for a release
# [lints]
# workspace = true
