[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
authors = ["Dalton Maag <sd@daltonmaag.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/googlefonts/fontheight"
publish = false

[dependencies]
anyhow = "1.0.100"
heck = "0.5.0"
pico-args = "0.5.0"
prettyplease = "0.2.37"
proc-macro2 = { version = "1.0.101", default-features = false }
quote = { version = "1", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
syn = "2"
walkdir = "2.5"

[dependencies.toml]
version = "0.9.8"
default-features = false
features = [
    "parse",
    "serde",
]

[lints]
workspace = true
